Adding wired fixes and starting battle-banzai fixes